# opengit

./: .gitignore  DESKTOP.md  biome.json  components.json  electron.vite.config.ts  next.config.ts  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
electron/: main.cjs
electron/main/: diff-hunks.ts  git.ts  github.ts  handlers.ts  index.ts  ipc.ts  path-utils.ts  repo-lock.ts  repo-registry.ts  state.ts  updater.ts  watch.ts
electron/preload/: index.ts
examples/webhook-relay/: README.md  server.mjs
scripts/: generate-icons.mjs  prepare-standalone.mjs  release.mjs  set-version.mjs
shared/: channels.ts  types.ts
src/: global.d.ts  globals.css  index.html  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: github.rs
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/components/: action-tooltip.tsx  confirm-dialog.tsx  copy-button.tsx  folder-picker.tsx  full-notice.tsx  git-logo.tsx  island.tsx  name-dialog.tsx  repo-picker.tsx  terminal-panel.tsx  theme-provider.tsx  theme-switcher.tsx  update-checker.tsx
src/hooks/: use-auto-refresh.ts  use-persisted-state.ts  use-realtime.ts
src/lib/: active-repo.ts  diff.test.ts  diff.ts  file-tree.test.ts  file-tree.ts  git.ts  graph.test.ts  graph.ts  highlight.test.ts  highlight.ts  link.tsx  notify.ts  repo-lock.ts  repo-path.ts  repo-registry.ts  router.ts  terminal-open.ts  terminal-sessions.ts  themes.ts
src/routes/: blame.tsx  conflicts.tsx  diff.tsx  file-history.tsx  home.tsx  reflog.tsx
(+78 files in other folders)
