[package]
name = "opengit"
version = "3.1.0"
description = "A git client desktop app"
authors = ["Chau Chan Bang"]
edition = "2021"

# The library that main.rs (and the mobile entry point) call into.
[lib]
name = "opengit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "fs", "io-util", "rt", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
notify = "7"
sha2 = "0.10"
dirs = "5"
base64 = "0.22"
portable-pty = "0.9"

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[profile.release]
# Smaller, faster-to-ship binaries — part of the point of leaving Electron.
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"  # drop unwinding tables — smaller binary, we never catch_unwind
